<resources>
    <string name="app_name">Component Tracker</string>
    <string name="start_by_adding_components_in_inventory">Start by adding components in inventory.</string>
    <string name="your_inventory_is_empty">Your inventory is empty!</string>
    <string name="empty_image_view">Empty Image View</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="price">PRICE</string>
    <string name="quantity">QUANTITY</string>
    <string name="delete_all_entries">DELETE ALL ENTRIES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="supplier_list">SUPPLIER LIST</string>
    <string name="price_plus">+</string>
    <string name="quantity_plus">+</string>
    <string name="price_minus">-</string>
    <string name="quantity_minus">-</string>
    <string name="sale">SALE</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add_picture">Photo</string>
    <string name="manufacturerAdd">MANUFACTURER</string>
    <string name="priceAdd">PRICE</string>
    <string name="product_nameAdd">PRODUCT NAME</string>
    <string name="quantityAdd">QUANTITY</string>
    <string name="add_manufacturer_nameAdd">add manufacturer name</string>
    <string name="add_priceAdd">add price</string>
    <string name="add_product_nameAdd">add product name</string>
    <string name="add_quantityAdd">add quantity</string>
    <string name="add_shipment">Shipment</string>
    <string name="order">ORDER</string>
    <string name="delete_dialog_msg">Delete this component?</string>
    <string name="cancel">Cancel</string>
    <string name="insert_item_failed">Failed to insert item</string>
    <string name="insert_item_success">Item successfully added</string>
    <string name="update_item_failed">Item failed to update</string>
    <string name="update_item_success">Item successfully updated</string>
    <string name="delete_item_failed">Failed to delete item</string>
    <string name="delete_item_success">Item deleted successfully</string>
    <string name="need_info">Please make sure you have inserted valid values for all fields</string>
    <string name="invalid_input">Please make sure that you have entered valid numbers for "Quantity" and "Price" </string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_activity_title_new_component">New Component</string>
    <string name="editor_activity_title_edit_component">Edit Component</string>
</resources>
